load("@github_opensourceways_community_robot_lib//:image.bzl", "build_plugin_image", "push_image", "image_tags")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/openeuler-robot/robot-gitee-tide
gazelle(name = "gazelle")

build_plugin_image(
    name = "image",
    plugin = "robot-gitee-tide",
)

push_image(
    name = "push_image",
    images = image_tags(
        target = ":image",
    ),
)
